# authselect

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .travis.yml  ChangeLog  Makefile.am  README.md  configure.ac  linguas.sh  version.m4  zanata-hooks.sh  zanata.xml
.copr/: Makefile
.github/actions/build-srpm/: action.yml
.github/workflows/: analyze-target.yml  analyze.yml  build.yml  ci.yml  codeql.yml  copr_build.yml  copr_cleanup.yml  coverity_scan.yml
include/: authselect.h
po/: LINGUAS  Makevars  POTFILES.in  af.po  authselect.pot  ca.po  cs.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_Hans.po  zh_TW.po
profiles/: Makefile.am  checksum
profiles/default/: README  REQUIREMENTS  dconf-locks  nsswitch.conf  password-auth  system-auth
profiles/local/: README  REQUIREMENTS  fingerprint-auth  nsswitch.conf  password-auth  postlogin  system-auth
profiles/minimal/: README  REQUIREMENTS  dconf-db  nsswitch.conf  password-auth  system-auth
profiles/nis/: README  REQUIREMENTS  dconf-locks  fingerprint-auth  nsswitch.conf  password-auth  postlogin  system-auth
profiles/sssd/: README  REQUIREMENTS  dconf-db  dconf-locks  fingerprint-auth  nsswitch.conf  password-auth  postlogin  smartcard-auth  switchable-auth  system-auth
profiles/sssd+fprint/: README  fingerprint-auth  nsswitch.conf  password-auth  postlogin  smartcard-auth  system-auth
profiles/winbind/: README  REQUIREMENTS  dconf-db  dconf-locks  fingerprint-auth  nsswitch.conf  password-auth  postlogin  switchable-auth  system-auth
profiles/winbind+fprint/: README  fingerprint-auth  nsswitch.conf  password-auth  system-auth
rpm/: authselect.spec  authselect.spec.in
scripts/: auto  manpages-build.sh.in  manpages-install.sh.in  manpages-uninstall.sh.in  po-linguas.sh  release-version.sh  update-pot.sh  zanata-hooks.sh
scripts/commands/: install-build-deps.sh  make-srpm.sh
src/: build_macros.m4  conf_macros.m4
src/cli/: Makefile.am  authselect-completion.sh  authselect.bash  cli_tool.c  cli_tool.h  main.c
src/common/: Makefile.am  common.h  debug.c  errno_t.h  format.c  malloc.c  utils.c
src/compat/: Makefile.am  authcompat.py  authcompat.py.in.in  authcompat_ConfigSnippet.py  authcompat_EnvironmentFile.py  authcompat_Options.py  authcompat_paths.in.in
src/compat/snippets/: authconfig-krb.conf  authconfig-sssd.conf
src/lib/: Makefile.am  authselect.c  authselect.exports  authselect.pc.in  authselect_activate.c  authselect_backup.c  authselect_check.c  authselect_conf.c  authselect_dir.c  authselect_files.c  authselect_files.h  authselect_paths.c  authselect_paths.h  authselect_private.h  authselect_profile.c  authselect_util.c  authselect_util.h  constants.h  paths.h
src/lib/files/: config.c  files.h  nsswitch.c  symlinks.c  system.c
src/lib/profiles/: activate.c  custom.c  list.c  profiles.h  read.c
src/lib/util/: dir.c  dir.h  evaluator.c  evaluator.h  file.c  file.h  selinux.c  selinux.h  string.c  string.h  string_array.c  string_array.h  template.c  template.h  textfile.c  textfile.h  time.c  time.h  util.h
src/man/: Makefile.am  authselect-migration.7.adoc  authselect-migration.7.txt.in.in  authselect-profiles.5.adoc  authselect-profiles.5.txt.in.in  authselect.8.adoc  authselect.8.txt  authselect.8.txt.in.in  build.sh.in
src/man/po/: authselect-migration.7.adoc.af.po  authselect-migration.7.adoc.ca.po  authselect-migration.7.adoc.cs.po  authselect-migration.7.adoc.de.po  authselect-migration.7.adoc.el.po  authselect-migration.7.adoc.es.po  authselect-migration.7.adoc.fa.po  authselect-migration.7.adoc.fi.po  authselect-migration.7.adoc.fr.po  authselect-migration.7.adoc.hu.po  authselect-migration.7.adoc.id.po  authselect-migration.7.adoc.it.po  authselect-migration.7.adoc.ja.po  authselect-migration.7.adoc.ka.po  authselect-migration.7.adoc.kk.po  authselect-migration.7.adoc.ko.po  authselect-migration.7.adoc.lo.po  authselect-migration.7.adoc.nl.po  authselect-migration.7.adoc.pl.po  authselect-migration.7.adoc.pot  authselect-migration.7.adoc.pt.po  authselect-migration.7.adoc.pt_BR.po  authselect-migration.7.adoc.ru.po  authselect-migration.7.adoc.si.po  authselect-migration.7.adoc.sv.po  authselect-migration.7.adoc.tr.po  authselect-migration.7.adoc.uk.po  authselect-migration.7.adoc.vi.po  authselect-migration.7.adoc.zh_CN.po  authselect-migration.7.adoc.zh_Hans.po  authselect-migration.7.adoc.zh_TW.po  authselect-profiles.5.adoc.af.po  authselect-profiles.5.adoc.ca.po  authselect-profiles.5.adoc.cs.po  authselect-profiles.5.adoc.de.po  authselect-profiles.5.adoc.el.po  authselect-profiles.5.adoc.es.po  authselect-profiles.5.adoc.fa.po  authselect-profiles.5.adoc.fi.po  authselect-profiles.5.adoc.fr.po  (+53 more)
src/tests/: Makefile.am  test_common.h  test_util_evaluator.c  test_util_string_array.c  test_util_template.c
src/tests/system/: conftest.py  mhc.yaml  polarion.yaml  pytest.ini  requirements.txt
src/tests/system/tests/: test_cli.py  test_local.py  test_misc.py  test_sssd.py
systemd/: Makefile.am  authselect-apply-changes.service  authselect.service
test/profiles/custom/custom-profile/: README  nsswitch.conf
test/profiles/default/default-profile/: README
test/profiles/default/sssd-profile/: README
